[package]
name = "kakarot-rpc"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }

[dependencies]
env_logger = "0.10.0"
eyre = { workspace = true }
kakarot-rpc-core = { path = "../core" }
log = "0.4.17"
url = { workspace = true }

# rpc
jsonrpsee = { workspace = true }

# async
async-trait = { workspace = true }
tokio = { workspace = true }

# misc
anyhow = { workspace = true }
dojo-test-utils = { workspace = true }
dotenv = { workspace = true }
hex = "0.4"
lazy_static = { workspace = true }
reqwest = "0.11.13"
reth-primitives = { workspace = true }
reth-rlp = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
starknet = { workspace = true }
thiserror = "1.0.38"
tower = "0.4.13"
tower-http = "0.4.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# for cross-compiling
openssl = { version = "0.10", features = ["vendored"] }


[dev-dependencies]
cargo-husky = { workspace = true }
ethers = { workspace = true }
rstest = { workspace = true }
kakarot-test-utils = { path = "../test-utils" }
