[package]
name = "kakarot-rpc"
version = "0.1.0"
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }

[dependencies]
env_logger = "0.10.0"
eyre = "0.6.8"
kakarot_rpc_core = { path = "../core" }
log = "0.4.17"
url = "2.3.1"

# rpc
jsonrpsee = { workspace = true }

# async
async-trait = { workspace = true }
tokio = { version = "1.21.2", features = ["macros"] }

# misc
anyhow = "1.0.68"
dotenv = "0.15.0"
hex = "0.4"
mockall = "0.11.3"
reqwest = "0.11.13"
reth-primitives = { workspace = true }
reth-rlp = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-types = { workspace = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.2.0"
starknet = { workspace = true }
thiserror = "1.0.38"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
  "precommit-hook",
  "run-for-all",
  "run-cargo-clippy",
  "run-cargo-fmt",
]
