[package]
name = "scripts"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
kakarot-rpc-core = { path = "../core" }

# Eth
ethers = { workspace = true }

# Katana
katana-core = { workspace = true }

# Other
tokio = { workspace = true }
serde_json = { workspace = true }


