[package]
name = "kakarot-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kakarot-rpc-core={ path = "../core" }
kakarot-rpc= { path = "../eth-rpc" }

# rpc
jsonrpsee = { workspace = true }

dojo-test-utils = { workspace = true }
eyre = { workspace = true }
katana-core = { workspace = true }
reth-primitives = { workspace = true }
starknet = { workspace = true }
starknet_api = { workspace = true }
starknet-crypto = { workspace = true }
url = { workspace = true }

lazy_static = { workspace = true }
tokio = { workspace = true }

bytes = "1"
dotenv = { workspace = true }
ethers = { workspace = true }
ethers-solc = { workspace = true }
foundry-config = { git = "https://github.com/foundry-rs/foundry", branch = "master" }
rstest = { workspace = true }
git2 = { workspace = true, optional = true }

futures = "0.3.26"
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true }

# testing
ctor = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
dump = ["git2"]

[[bin]]
name = "dump-katana"
path = "src/bin/dump-katana.rs"
required-features = ["dump"]

[[bin]]
name = "dump-genesis"
path = "src/bin/dump-genesis.rs"
