[package]
name = "kakarot-test-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kakarot-rpc-core = { path = "../core" }
kakarot-rpc = { path = "../eth-rpc" }

# Eth
ethers = { workspace = true }
ethers-solc = { workspace = true }
foundry-config = { git = "https://github.com/foundry-rs/foundry", branch = "master" }
reth-primitives = { workspace = true }

# Starknet
dojo-test-utils = { workspace = true }
katana-core = { workspace = true }
starknet = { workspace = true }
starknet_api = { workspace = true }
starknet-crypto = { workspace = true }

# Other
async-trait = { workspace = true }
bytes = "1"
dotenv = { workspace = true }
eyre = { workspace = true }
futures = "0.3.26"
git2 = { workspace = true, optional = true }
jsonrpsee = { workspace = true }
lazy_static = { workspace = true }
rstest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true }
tokio = { workspace = true }
walkdir = "2.4.0"


# Testing
ctor = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "dump-genesis"
path = "src/bin/dump-genesis.rs"
